--- a/config/20texas.ini
+++ b/config/20texas.ini
@@ -16,6 +16,6 @@ n = 183
 fdim = 1703
 class_num = 5
 data_set = texas
-structgraph_path = ./data\texas\out1_graph_edges.txt
-featuregraph_path = ./data\texas\knn\c
-adjgraph_path= ./data/texas/texas.edge_adj2
+structgraph_path = .\texas\out1_graph_edges.txt
+featuregraph_path = .\texas\knn\c
+adjgraph_path= ./texas/texas.edge_adj2
